Added page header and welcome section.

--- a/index.html
+++ b/index.html
@@ -1,26 +1,28 @@
 <!doctype html>
 <html>
-<heaad>
+<head>
 	<meta charset="utf-8">
-	<title>Static layout starter</title>
+	<title>Proxima | Pracownia projektowa</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 
 	<link href="assets/dist/styles/app.css" rel="stylesheet">
-</heaad>
-<body id="welcome">
+</head>
+<body>
 	<header class="page-header">
 		<div class="inner">
 			<h1 class="page-logo">
-				<a href="#welcome" title="Static layout starter">Static layout starter</a>
+				<a href="#" title="Proxima"><img src="assets/src/images/proxima-logo.jpg"></a>
 			</h1>
 
 			<nav class="page-nav">
 				<ul>
-					<li><a href="#section-1">Menu Item 1</a></li>
-					<li><a href="#section-2">Menu Item 2</a></li>
-					<li><a href="#section-3">Menu Item 3</a></li>
-					<li><a href="#section-4">Menu Item 4</a></li>
+					<li><a href="#o-firmie">O firmie</a></li>
+					<li><a href="#zakres-uslug">Zakres usług</a></li>
+					<li><a href="#realizacje">Realizacje</a></li>
+					<li><a href="#projekt-eu">Projekt EU</a></li>
+					<li><a href="#zamowienia">Zamówienia</a></li>
+					<li><a href="#kontakt">Kontakt</a></li>
 				</ul>
 				<a href="#toggle" class="page-nav-toggle" title="Toggle navigation">
 					<span></span>
@@ -29,8 +31,19 @@
 		</div>
 	</header>
 
-	<main class="inner">
-		<h2>Page content</h2>
+	<main>
+		<section class="welcome">
+			<div class="inner">
+				<h2>
+					PPUH PROXIMA spółka z o.o.<br>
+					Pracownia projektów budowlanych
+				</h2>
+				<p>
+					<a class="btn">Zobacz nasz Projekt EU</a>
+					<img src="assets/src/images/logo-eu.svg">
+				</p>
+			</div>
+		</section>
 	</main>
 
 	<script src="assets/dist/scripts/main.js"></script>
