Added about section.

--- a/index.html
+++ b/index.html
@@ -44,6 +44,26 @@
 				</p>
 			</div>
 		</section>
+
+		<section class="about">
+			<div class="inner">
+				<h2>
+					Usługi projektowe<br>
+					i wykonawcze
+				</h2>
+				<p>
+					Oferujemy usługi w zakrasie projektowania budownictwa ogólnego i przemysłowego, kompleksową realizację
+					oczyszczalni ścieków i składowisk odpadów. Firma specjalizuje się w realizacji projektów infrastruktury
+					komunalnej dla miast i gmin. Realizacja dużych zadań projektowych możliwa jest dzięki stworzeniu
+					profesjonalnego i spójnego zespołu projektantów oraz stałej współpracy ze specjalistami zewnętrznymi.
+				</p>
+				<p>
+					Oferta firmy obejmuje doradztwo inżynierskie, ekspertyzy, inwentaryzacje, studia, kompleksowe projekty
+					budowlane i wykonawcze inwestycji oraz ich modernizacji, kosztorysy oraz rozruchu obiektów.
+				</p>
+				<a class="btn">Zobacz ofertę</a>
+			</div>
+		</section>
 	</main>
 
 	<script src="assets/dist/scripts/main.js"></script>
