Added history section.

--- a/index.html
+++ b/index.html
@@ -64,6 +64,28 @@
 				<a class="btn">Zobacz ofertę</a>
 			</div>
 		</section>
+
+		<section class="history">
+			<div class="inner">
+				<h3>
+					Istniejemy na rynku już ponad 26 lat
+				</h3>
+				<div>
+					<p>
+						Firma PPUH Proxima Spółka z o.o. powstała w roku 1988, w wyniku przekształcenia Pracowni Projektowej
+						byłego Zakładu Pilskiego Przedsiębiorstwa Robót Inżynieryjnych w Chodzieży, przy ul. Piaskowej 29.
+						Kadra inżynieryjno-techniczna w/w Zakładu wywiodła się w większości z istniejącej jeszcze wcześniej
+						Pracowni Projektowej przy Wojewódzkim Przedsiębiorstwie Gospodarki Komunalnej i Mieszkaniowej w Pile,
+						oddział w Chodzieży, która została założona już w roku 01.07.1974.
+					</p>
+					<p>
+						W okresie przekształcenia Zakładu Pilskiego Przedsiębiorstwa Robót Inżynieryjnych w Chodzieży,
+						wszyscy ówcześni pracownicy Pracowni Projektowej stali się udziałowcami Spółki z ograniczoną
+						odpowiedzialnością o nazwie Przedsiębiorstwo Produkcyjno-Usługowo-Handlowe „Proxima” (PPUH „Proxima”).
+					</p>
+				</div>
+			</div>
+		</section>
 	</main>
 
 	<script src="assets/dist/scripts/main.js"></script>
