Added services section.

--- a/index.html
+++ b/index.html
@@ -86,6 +86,25 @@
 				</div>
 			</div>
 		</section>
+
+		<section class="services">
+			<div class="inner">
+				<h3>
+					Zakres naszych usług
+				</h3>
+				<ul>
+					<li class="terrain">Projekty zagospodarowania terenów</li>
+					<li class="house">Projekty budynków wszelkich typów (budownictwa ogólnego oraz  przemysłowego)</li>
+					<li class="pipe">Projekty techniczne uzbrojenia terenów(sieci wodociągowych, cieplnych, gazowych, kanalizacji sanitarnej i deszczowej oraz sieci elektroenergetycznych)</li>
+					<li class="papers">Operaty wodno-prawne oraz ochrony powietrza</li>
+					<li class="drain">Kompleksowa realizacja oczyszczalni ścieków oraz składowisk odpadów stałych</li>
+					<li class="garbage">Projekty składowisk odpadów</li>
+					<li class="geo">Wykonywanie badań geologicznych i hydrogeologicznych</li>
+					<li class="eye">Prowadzenie nadzorów inwestorskich i autorskich</li>
+					<li class="road">Projekty dróg i ulic oraz organizacji ruchu kołowego</li>
+				</ul>
+			</div>
+		</section>
 	</main>
 
 	<script src="assets/dist/scripts/main.js"></script>
