Added project eu section.

--- a/index.html
+++ b/index.html
@@ -70,15 +70,15 @@
 				<h3>
 					Istniejemy na rynku już ponad 26 lat
 				</h3>
-				<div>
-					<p>
+				<div class="col-2">
+					<p class="col">
 						Firma PPUH Proxima Spółka z o.o. powstała w roku 1988, w wyniku przekształcenia Pracowni Projektowej
 						byłego Zakładu Pilskiego Przedsiębiorstwa Robót Inżynieryjnych w Chodzieży, przy ul. Piaskowej 29.
 						Kadra inżynieryjno-techniczna w/w Zakładu wywiodła się w większości z istniejącej jeszcze wcześniej
 						Pracowni Projektowej przy Wojewódzkim Przedsiębiorstwie Gospodarki Komunalnej i Mieszkaniowej w Pile,
 						oddział w Chodzieży, która została założona już w roku 01.07.1974.
 					</p>
-					<p>
+					<p class="col">
 						W okresie przekształcenia Zakładu Pilskiego Przedsiębiorstwa Robót Inżynieryjnych w Chodzieży,
 						wszyscy ówcześni pracownicy Pracowni Projektowej stali się udziałowcami Spółki z ograniczoną
 						odpowiedzialnością o nazwie Przedsiębiorstwo Produkcyjno-Usługowo-Handlowe „Proxima” (PPUH „Proxima”).
@@ -109,6 +109,38 @@
 		<section class="works">
 			<div class="inner">
 				<h2>Realizacje</h2>
+			</div>
+		</section>
+
+		<section class="project">
+			<div class="inner">
+				<h2>Projekt EU</h2>
+				<div class="col-2">
+					<div class="col">
+						<p>
+							W dniu 29 lutego 2015 roku, firma Przedsiębiorstwo Produkcyjno - Usługowo - Handlowe "PROXIMA" Sp. z o.o.
+							podpisała z Narodowym Centrum Badań i Rozwoju w Warszawie Umowę  o dofinansowanie Projektu pt.:
+						</p>
+						<blockquote>
+							<p>
+								Badania i rozwój wysokowydajnej metody natleniania głębokowodnych stref jezior i zbiorników wodnych
+								z zastosowaniem odnawialnych źródeł energii w celu ich rekultywacji.
+							</p>
+						</blockquote>
+					</div>
+					<div class="col">
+						<p>
+							Projekt jest współfinansowany ze środków Europejskiego Funduszu Rozwoju Regionalnego w ramach Działania 1.1. „Projekty B+R przedsiębiorstw”,
+							Poddziałania 1.1.1 „Badania przemysłowe i prace rozwojowe realizowane przez przedsiębiorstwa” Programu Operacyjny Inteligentny Rozwój 2014-2020.
+							Przedmiotem projektu jest zaprojektowanie i wytworzenie wysokowydajnego urządzenia do natlenia głębokich stref jezior oraz innych zbiorników wodnych,
+							zasilanego energią odnawialną, służącego do ich rekultywacji.
+						</p>
+						<div class="logos">
+							<img src="assets/src/images/eu-fund.svg" alt="Fundusze Europejskie">
+							<img src="assets/src/images/eu-fund-2.svg" alt="Unia Europejska">
+						</div>
+					</div>
+				</div>
 			</div>
 		</section>
 	</main>
