Added orders section.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<header class="page-header">
 		<div class="inner">
 			<h1 class="page-logo">
-				<a href="#" title="Proxima"><img src="assets/src/images/proxima-logo.jpg"></a>
+				<a href="#" title="Proxima"><img src="assets/src/images/proxima-logo.jpg" alt="Proxima"></a>
 			</h1>
 
 			<nav class="page-nav">
@@ -40,7 +40,7 @@
 				</h2>
 				<p>
 					<a class="btn">Zobacz nasz Projekt EU</a>
-					<img src="assets/src/images/logo-eu.svg">
+					<img src="assets/src/images/logo-eu.svg" alt="Unia Europejska">
 				</p>
 			</div>
 		</section>
@@ -135,12 +135,34 @@
 							Przedmiotem projektu jest zaprojektowanie i wytworzenie wysokowydajnego urządzenia do natlenia głębokich stref jezior oraz innych zbiorników wodnych,
 							zasilanego energią odnawialną, służącego do ich rekultywacji.
 						</p>
-						<div class="logos">
+						<p class="logos">
 							<img src="assets/src/images/eu-fund.svg" alt="Fundusze Europejskie">
 							<img src="assets/src/images/eu-fund-2.svg" alt="Unia Europejska">
-						</div>
+						</p>
 					</div>
 				</div>
+			</div>
+		</section>
+
+		<section class="orders">
+			<div class="inner">
+				<h2>Zamówienia</h2>
+				<article class="single-order">
+					<div>
+						<p><time>12.04.2015</time></p>
+						<h3>Zakup i sukcesywna dostawa materiałów BHP - SAULE-1/06/2016</h3>
+						<p>
+							Przedmiotem niniejszego postępowania jest zakup i sukcesywna dostawa materiałów BHP. Numer postępowania SAULE-1/06/2016.
+						</p>
+					</div>
+					<aside>
+						<h4>Pliki do pobrania:</h4>
+						<p>
+							<a href="#" title="Pobierz">pdf</a>
+							<a href="#" title="Pobierz">doc</a>
+						</p>
+					</aside>
+				</article>
 			</div>
 		</section>
 	</main>
