Added contact and footer section.

--- a/index.html
+++ b/index.html
@@ -165,6 +165,48 @@
 				</article>
 			</div>
 		</section>
+
+		<section class="contact">
+			<div class="inner">
+				<h2>Kontakt</h2>
+
+				<form>
+					<fieldset>
+						<label for="name">Imię i nazwisko</label>
+						<input class="control" type="text" name="name" id="name" required>
+					</fieldset>
+					<fieldset>
+						<label for="email">Email</label>
+						<input class="control" type="email" id="email" name="email" required>
+					</fieldset>
+					<fieldset>
+						<label for="message">Wiadomość</label>
+						<textarea class="control" id="message" name="message" rows="1" cols="30" required></textarea>
+					</fieldset>
+					<button type="submit" class="btn">Wyślij</button>
+				</form>
+			</div>
+		</section>
+
+		<footer>
+			<div class="inner">
+				<h2>Przedsiębiorstwo Produkcyjno - Usługowo - Handlowe PROXIMA  Sp. z o.o.</h2>
+				<div class="col-2">
+					<div class="col">
+						<p>
+						<p>64-800 Chodzież ul. Młyńska 3</p>
+						<p>NIP  764-010-42-84</p>
+						<p>REGON  008116529</p>
+						<p><a href="proxima@tak.pl" title="Napisz do nas">proxima@tak.pl</a></p>
+					</div>
+					<div class="col">
+						<p>tel <a href="tel:672822898">0-67 28 22 898</a></p>
+						<p>kom <a href="tel:502666185">502 666 185</a></p>
+						<p>fax <a href="tel:672827687">0-67 28 27 687</a></p>
+					</div>
+				</div>
+			</div>
+		</footer>
 	</main>
 
 	<script src="assets/dist/scripts/main.js"></script>
