Added toggle menu, reset and some padding fixes.

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 
 			<nav class="page-nav">
 				<ul>
-					<li><a href="#o-firmie">O firmie</a></li>
-					<li><a href="#zakres-uslug">Zakres usług</a></li>
-					<li><a href="#realizacje">Realizacje</a></li>
-					<li><a href="#projekt-eu">Projekt EU</a></li>
-					<li><a href="#zamowienia">Zamówienia</a></li>
-					<li><a href="#kontakt">Kontakt</a></li>
+					<li><a href="#about">O firmie</a></li>
+					<li><a href="#services">Zakres usług</a></li>
+					<li><a href="#works">Realizacje</a></li>
+					<li><a href="#project">Projekt EU</a></li>
+					<li><a href="#orders">Zamówienia</a></li>
+					<li><a href="#contact">Kontakt</a></li>
 				</ul>
-				<a href="#toggle" class="page-nav-toggle" title="Toggle navigation">
+				<a href="#toggle" class="page-nav-toggle" title="Pokaż/ukryj nawigację">
 					<span></span>
 				</a>
 			</nav>
@@ -45,7 +45,7 @@
 			</div>
 		</section>
 
-		<section class="about">
+		<section class="about" id="about">
 			<div class="inner">
 				<h2>
 					Usługi projektowe<br>
@@ -87,7 +87,7 @@
 			</div>
 		</section>
 
-		<section class="services">
+		<section class="services" id="services">
 			<div class="inner">
 				<h2>
 					Zakres naszych usług
@@ -95,7 +95,7 @@
 				<ul>
 					<li class="terrain">Projekty zagospodarowania terenów</li>
 					<li class="house">Projekty budynków wszelkich typów (budownictwa ogólnego oraz  przemysłowego)</li>
-					<li class="pipe">Projekty techniczne uzbrojenia terenów(sieci wodociągowych, cieplnych, gazowych, kanalizacji sanitarnej i deszczowej oraz sieci elektroenergetycznych)</li>
+					<li class="pipe">Projekty techniczne uzbrojenia terenów (sieci wodociągowych, cieplnych, gazowych, kanalizacji sanitarnej i deszczowej oraz sieci elektroenergetycznych)</li>
 					<li class="papers">Operaty wodno-prawne oraz ochrony powietrza</li>
 					<li class="drain">Kompleksowa realizacja oczyszczalni ścieków oraz składowisk odpadów stałych</li>
 					<li class="garbage">Projekty składowisk odpadów</li>
@@ -106,13 +106,13 @@
 			</div>
 		</section>
 
-		<section class="works">
+		<section class="works" id="works">
 			<div class="inner">
 				<h2>Realizacje</h2>
 			</div>
 		</section>
 
-		<section class="project">
+		<section class="project" id="project">
 			<div class="inner">
 				<h2>Projekt EU</h2>
 				<div class="col-2">
@@ -144,7 +144,7 @@
 			</div>
 		</section>
 
-		<section class="orders">
+		<section class="orders" id="orders">
 			<div class="inner">
 				<h2>Zamówienia</h2>
 				<article class="single-order">
@@ -166,7 +166,7 @@
 			</div>
 		</section>
 
-		<section class="contact">
+		<section class="contact" id="contact">
 			<div class="inner">
 				<h2>Kontakt</h2>
 
