--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
 		<section class="welcome">
 			<div class="inner">
 				<h2>
-					PPUH PROXIMA spółka z o.o.<br>
-					Pracownia projektów budowlanych
+					PPUH PROXIMA spółka z o.o.
 				</h2>
 				<p>
 					<a class="btn">Zobacz nasz Projekt EU</a>
