--- a/index.html
+++ b/index.html
@@ -92,13 +92,10 @@
 					Zakres naszych usług
 				</h2>
 				<ul>
-					<li class="terrain">Projekty zagospodarowania terenów</li>
-					<li class="house">Projekty budynków wszelkich typów (budownictwa ogólnego oraz  przemysłowego)</li>
-					<li class="pipe">Projekty techniczne uzbrojenia terenów (sieci wodociągowych, cieplnych, gazowych, kanalizacji sanitarnej i deszczowej oraz sieci elektroenergetycznych)</li>
-					<li class="papers">Operaty wodno-prawne oraz ochrony powietrza</li>
+					<li class="terrain">Projekty zagospodarowania terenów i budynków wszelkich typów (budownictwa ogólnego oraz przemysłowego)</li>
+					<li class="pipe">Projekty techniczne uzbrojenia terenów, operaty wodno-prawne i ochrony powietrza</li>
 					<li class="drain">Kompleksowa realizacja oczyszczalni ścieków oraz składowisk odpadów stałych</li>
-					<li class="garbage">Projekty składowisk odpadów</li>
-					<li class="geo">Wykonywanie badań geologicznych i hydrogeologicznych</li>
+					<li class="geo">Projekty składowisk odpadów oraz wykonywanie badań geologicznych i hydrogeologicznych</li>
 					<li class="eye">Prowadzenie nadzorów inwestorskich i autorskich</li>
 					<li class="road">Projekty dróg i ulic oraz organizacji ruchu kołowego</li>
 				</ul>
@@ -193,13 +190,12 @@
 				<h2>Przedsiębiorstwo Produkcyjno - Usługowo - Handlowe PROXIMA  Sp. z o.o.</h2>
 				<div class="col-2">
 					<div class="col">
-						<p>
-						<p>64-800 Chodzież ul. Młyńska 3</p>
+						<p>64-800 Chodzież, ul. Młyńska 3</p>
 						<p>NIP  764-010-42-84</p>
 						<p>REGON  008116529</p>
 						<p><a href="proxima@tak.pl" title="Napisz do nas">proxima@tak.pl</a></p>
 					</div>
-					<div class="col">
+					<div class="col phones">
 						<p>tel <a href="tel:672822898">0-67 28 22 898</a></p>
 						<p>kom <a href="tel:502666185">502 666 185</a></p>
 						<p>fax <a href="tel:672827687">0-67 28 27 687</a></p>
