Welcome section fixes.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 
 	<link href="assets/dist/styles/app.css" rel="stylesheet">
+	<link rel="icon" href="assets/dist/images/favicon.png" type="image/png" sizes="16x16">
 </head>
 <body>
 	<header class="page-header">
@@ -35,7 +36,8 @@
 		<section class="welcome">
 			<div class="inner">
 				<h2>
-					PPUH PROXIMA spółka z o.o.
+					<img src="assets/src/images/proxima-logo-big.png" alt="Proxima">
+					<span>PPUH Proxima Spółka z o.o.</span>
 				</h2>
 				<p>
 					<a class="btn">Zobacz nasz Projekt EU</a>
@@ -60,7 +62,7 @@
 					Oferta firmy obejmuje doradztwo inżynierskie, ekspertyzy, inwentaryzacje, studia, kompleksowe projekty
 					budowlane i wykonawcze inwestycji oraz ich modernizacji, kosztorysy oraz rozruchu obiektów.
 				</p>
-				<a class="btn">Zobacz ofertę</a>
+				<a href="#services" class="btn">Zobacz ofertę</a>
 			</div>
 		</section>
 
