Added smooth scroll.

--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
 	<link href="assets/dist/styles/app.css" rel="stylesheet">
 	<link rel="icon" href="assets/dist/images/favicon.png" type="image/png" sizes="16x16">
 </head>
-<body>
+<body id="welcome">
 	<header class="page-header">
 		<div class="inner">
 			<h1 class="page-logo">
-				<a href="#" title="Proxima"><img src="assets/src/images/proxima-logo.jpg" alt="Proxima"></a>
+				<a href="#welcome" title="Proxima" data-scroll><img src="assets/src/images/proxima-logo.jpg" alt="Proxima"></a>
 			</h1>
 
 			<nav class="page-nav">
 				<ul>
-					<li><a href="#about">O firmie</a></li>
-					<li><a href="#services">Zakres usług</a></li>
-					<li><a href="#works">Realizacje</a></li>
-					<li><a href="#project">Projekt EU</a></li>
-					<li><a href="#orders">Zamówienia</a></li>
-					<li><a href="#contact">Kontakt</a></li>
+					<li><a data-scroll href="#about">O firmie</a></li>
+					<li><a data-scroll href="#services">Zakres usług</a></li>
+					<li><a data-scroll href="#works">Realizacje</a></li>
+					<li><a data-scroll href="#project">Projekt EU</a></li>
+					<li><a data-scroll href="#orders">Zamówienia</a></li>
+					<li><a data-scroll href="#contact">Kontakt</a></li>
 				</ul>
 				<a href="#toggle" class="page-nav-toggle" title="Pokaż/ukryj nawigację">
 					<span></span>
@@ -40,7 +40,7 @@
 					<span>PPUH Proxima Spółka z o.o.</span>
 				</h2>
 				<p>
-					<a class="btn">Zobacz nasz Projekt EU</a>
+					<a class="btn" href="#project" data-scroll>Zobacz nasz Projekt EU</a>
 					<img src="assets/src/images/logo-eu.svg" alt="Unia Europejska">
 				</p>
 			</div>
@@ -62,7 +62,7 @@
 					Oferta firmy obejmuje doradztwo inżynierskie, ekspertyzy, inwentaryzacje, studia, kompleksowe projekty
 					budowlane i wykonawcze inwestycji oraz ich modernizacji, kosztorysy oraz rozruchu obiektów.
 				</p>
-				<a href="#services" class="btn">Zobacz ofertę</a>
+				<a href="#services" class="btn" data-scroll>Zobacz ofertę</a>
 			</div>
 		</section>
 
@@ -97,7 +97,7 @@
 					<li class="terrain">Projekty zagospodarowania terenów i budynków wszelkich typów (budownictwa ogólnego oraz przemysłowego)</li>
 					<li class="pipe">Projekty techniczne uzbrojenia terenów, operaty wodno-prawne i ochrony powietrza</li>
 					<li class="drain">Kompleksowa realizacja oczyszczalni ścieków oraz składowisk odpadów stałych</li>
-					<li class="geo">Projekty składowisk odpadów oraz wykonywanie badań geologicznych i hydrogeologicznych</li>
+					<li class="garbage">Projekty składowisk odpadów oraz wykonywanie badań geologicznych i hydrogeologicznych</li>
 					<li class="eye">Prowadzenie nadzorów inwestorskich i autorskich</li>
 					<li class="road">Projekty dróg i ulic oraz organizacji ruchu kołowego</li>
 				</ul>
