Added logos to welcome section.

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 					<span>PPUH Proxima Spółka z o.o.</span>
 				</h2>
 				<p>
-					<a class="btn" href="#project" data-scroll>Zobacz nasz Projekt EU</a>
-					<img src="assets/src/images/logo-eu.svg" alt="Unia Europejska">
+					<img src="assets/src/images/eu-fund.svg" alt="Fundusze Europejskie">
+					<img src="assets/src/images/eu-fund-2.svg" alt="Unia Europejska">
 				</p>
 			</div>
 		</section>
