Changed orders section.

--- a/index.html
+++ b/index.html
@@ -147,19 +147,21 @@
 				<h2>Zamówienia</h2>
 				<article class="single-order">
 					<div>
-						<p><time>12.04.2015</time></p>
-						<h3>Zakup i sukcesywna dostawa materiałów BHP - SAULE-1/06/2016</h3>
+						<!--<p><time>12.04.2015</time></p>-->
+						<!--<h3></h3>-->
 						<p>
-							Przedmiotem niniejszego postępowania jest zakup i sukcesywna dostawa materiałów BHP. Numer postępowania SAULE-1/06/2016.
+							Zamówienia związane z realizacją projektu nr. POIR.01.01.01-00-0853/15,
+							pt. Badania i rozwój wysokowydajnej metody natleniania głębokowodnych stref jezior i zbiorników wodnych
+							z zastosowaniem odnawialnych źródeł energii w celu ich rekultywacji.
 						</p>
 					</div>
-					<aside>
-						<h4>Pliki do pobrania:</h4>
-						<p>
-							<a href="#" title="Pobierz">pdf</a>
-							<a href="#" title="Pobierz">doc</a>
-						</p>
-					</aside>
+					<!--<aside>-->
+						<!--<h4>Pliki do pobrania:</h4>-->
+						<!--<p>-->
+							<!--<a href="#" title="Pobierz">pdf</a>-->
+							<!--<a href="#" title="Pobierz">doc</a>-->
+						<!--</p>-->
+					<!--</aside>-->
 				</article>
 			</div>
 		</section>
