Added header to works section.

--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
 
 				<p>Lista naszych realizacji z ostatnich 10 lat:</p>
 				<ol>
-					<li><a href="works.html#buildings" target="_blank">Projekty zagospodarowania terenu oraz budynków wszelkich typów z instalacjami wewnętrznymi i zewnętrznymi.</a></li>
-					<li><a href="works.html#technical" target="_blank">Projekty techniczne uzbrojenia terenu oraz operatów wodnoprawnych.</a></li>
-					<li><a href="works.html#dump" target="_blank">Projekty składowisk odpadów stałych.</a></li>
-					<li><a href="works.html#plant" target="_blank">Kompleksowa realizacja oczyszczalni ścieków.</a></li>
-					<li><a href="works.html#roads" target="_blank">Projekty dróg i ulic oraz organizacji ruchu.</a></li>
+					<li><a href="works.html">Projekty zagospodarowania terenu oraz budynków wszelkich typów z instalacjami wewnętrznymi i zewnętrznymi.</a></li>
+					<li><a href="works.html">Projekty techniczne uzbrojenia terenu oraz operatów wodnoprawnych.</a></li>
+					<li><a href="works.html">Projekty składowisk odpadów stałych.</a></li>
+					<li><a href="works.html">Kompleksowa realizacja oczyszczalni ścieków.</a></li>
+					<li><a href="works.html">Projekty dróg i ulic oraz organizacji ruchu.</a></li>
 				</ol>
 			</div>
 		</section>
