--- a/works.html
+++ b/works.html
@@ -10,6 +10,28 @@
 	<link rel="icon" href="assets/dist/images/favicon.png" type="image/png" sizes="16x16">
 </head>
 <body id="welcome" class="body-work">
+	<header class="page-header">
+		<div class="inner">
+			<h1 class="page-logo">
+				<a href="index.html#welcome" title="Proxima" data-scroll><img src="assets/src/images/proxima-logo.jpg" alt="Proxima"></a>
+			</h1>
+
+			<nav class="page-nav">
+				<ul>
+					<li><a data-scroll href="index.html#about">O firmie</a></li>
+					<li><a data-scroll href="index.html#services">Zakres usług</a></li>
+					<li><a data-scroll href="index.html#works">Realizacje</a></li>
+					<li><a data-scroll href="index.html#project">Projekt EU</a></li>
+					<li><a data-scroll href="index.html#orders">Zamówienia</a></li>
+					<li><a data-scroll href="index.html#contact">Kontakt</a></li>
+				</ul>
+				<a href="#toggle" class="page-nav-toggle" title="Pokaż/ukryj nawigację">
+					<span></span>
+				</a>
+			</nav>
+		</div>
+	</header>
+
 	<section class="works works-list" id="works">
 		<div class="inner">
 			<h2>Realizacje</h2>
