Fixes on works section.

--- a/index.html
+++ b/index.html
@@ -110,12 +110,13 @@
 
 				<p>Lista naszych realizacji z ostatnich 10 lat:</p>
 				<ol>
-					<li><a href="works.html">Projekty zagospodarowania terenu oraz budynków wszelkich typów z instalacjami wewnętrznymi i zewnętrznymi.</a></li>
-					<li><a href="works.html">Projekty techniczne uzbrojenia terenu oraz operatów wodnoprawnych.</a></li>
-					<li><a href="works.html">Projekty składowisk odpadów stałych.</a></li>
-					<li><a href="works.html">Kompleksowa realizacja oczyszczalni ścieków.</a></li>
-					<li><a href="works.html">Projekty dróg i ulic oraz organizacji ruchu.</a></li>
+					<li>Projekty zagospodarowania terenu oraz budynków wszelkich typów z instalacjami wewnętrznymi i zewnętrznymi.</li>
+					<li>Projekty techniczne uzbrojenia terenu oraz operatów wodnoprawnych.</li>
+					<li>Projekty składowisk odpadów stałych.</li>
+					<li>Kompleksowa realizacja oczyszczalni ścieków.</li>
+					<li>Projekty dróg i ulic oraz organizacji ruchu.</li>
 				</ol>
+				<p class="check-list"><a href="works.html">Zobacz pełną listę.</a></p>
 			</div>
 		</section>
 
