Fixed welcome section.

--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
 		<section class="welcome">
 			<div class="inner">
 				<h2>
-					<img src="assets/src/images/proxima-logo-big.png" alt="Proxima">
-					<span>PPUH Proxima Spółka z o.o.</span>
+					Pracownia projektów budowlanych.
 				</h2>
 				<p>
 					<img src="assets/src/images/eu-fund.svg" alt="Fundusze Europejskie">
