--- a/works.html
+++ b/works.html
@@ -13,7 +13,7 @@
 	<header class="page-header">
 		<div class="inner">
 			<h1 class="page-logo">
-				<a href="index.html#welcome" title="Proxima" data-scroll><img src="assets/src/images/proxima-logo.jpg" alt="Proxima"></a>
+				<a href="index.html#welcome" title="Proxima" data-scroll><img src="assets/src/images/logo.svg" alt="Proxima"></a>
 			</h1>
 
 			<nav class="page-nav">
