--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Proxima | Pracownia projektowa</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+	<meta name="robots" content="noindex, nofollow">
 
 	<link href="assets/dist/styles/app.css" rel="stylesheet">
 	<link rel="icon" href="assets/dist/images/favicon.png" type="image/png" sizes="16x16">
